[gd_scene load_steps=32 format=2]

[ext_resource path="res://Grafik/Assets/GUI/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Assets/GUI/Background.png" type="Texture" id=2]
[ext_resource path="res://Grafik/Assets/GUI/sound.png" type="Texture" id=3]
[ext_resource path="res://Szenen/GUI/MainMenuBtn.gd" type="Script" id=5]
[ext_resource path="res://Szenen/GUI/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.tscn" type="PackedScene" id=7]
[ext_resource path="res://Grafik/Assets/GUI/warning.png" type="Texture" id=8]
[ext_resource path="res://Szenen/GUI/Warning.gd" type="Script" id=9]
[ext_resource path="res://Grafik/Assets/GUI/HelloYou.png" type="Texture" id=10]
[ext_resource path="res://Grafik/Assets/GUI/tippsclose2.png" type="Texture" id=11]
[ext_resource path="res://Szenen/GUI/WarningLaden.gd" type="Script" id=12]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque_open.otf"

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=22]
size = 32
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=35]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=36]
size = 22
font_data = SubResource( 35 )

[sub_resource type="DynamicFontData" id=37]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque_open.otf"

[sub_resource type="DynamicFont" id=38]
size = 32
font_data = SubResource( 37 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = SubResource( 23 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=26]
size = 22
font_data = SubResource( 25 )

[sub_resource type="DynamicFontData" id=27]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=28]
size = 20
font_data = SubResource( 27 )

[sub_resource type="DynamicFontData" id=29]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=30]
size = 22
font_data = SubResource( 29 )

[sub_resource type="DynamicFontData" id=31]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=32]
size = 20
font_data = SubResource( 31 )

[sub_resource type="DynamicFontData" id=33]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=34]
size = 20
font_data = SubResource( 33 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 640, 339 )
texture = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 640, 375 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Titel" type="Label" parent="Menu"]
margin_left = -187.0
margin_top = -195.0
margin_right = 187.0
margin_bottom = -146.0
custom_colors/font_color = Color( 1, 0.803922, 0.615686, 1 )
custom_fonts/font = SubResource( 2 )
text = "Hauptmenü"
align = 1
valign = 1

[node name="Button" type="Node2D" parent="Menu"]
position = Vector2( 0, -8 )
script = ExtResource( 5 )

[node name="NeuesSpiel" parent="Menu/Button" instance=ExtResource( 7 )]
position = Vector2( 0, -91.3333 )

[node name="Label" type="Label" parent="Menu/Button"]
margin_left = -152.0
margin_top = -115.0
margin_right = 152.0
margin_bottom = -67.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_colors/font_outline_modulate = Color( 0.745098, 0.396078, 0.407843, 1 )
custom_fonts/font = SubResource( 22 )
text = "Neues Spiel starten"
align = 1
valign = 1

[node name="Button2" type="Node2D" parent="Menu"]
position = Vector2( 0, 48 )
script = ExtResource( 5 )

[node name="SpielLaden" parent="Menu/Button2" instance=ExtResource( 7 )]
position = Vector2( -6.10352e-05, -90 )

[node name="Label2" type="Label" parent="Menu/Button2"]
margin_left = -152.0
margin_top = -115.0
margin_right = 152.0
margin_bottom = -67.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_colors/font_outline_modulate = Color( 0.745098, 0.396078, 0.407843, 1 )
custom_fonts/font = SubResource( 22 )
text = "Spiel laden"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Button5" type="Node2D" parent="Menu"]
position = Vector2( 0, 162.667 )
script = ExtResource( 5 )

[node name="close" parent="Menu/Button5" instance=ExtResource( 7 )]
position = Vector2( 0, -81.3333 )

[node name="Label" type="Label" parent="Menu/Button5"]
margin_left = -152.0
margin_top = -105.0
margin_right = 152.0
margin_bottom = -57.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_colors/font_outline_modulate = Color( 0.745098, 0.396078, 0.407843, 1 )
custom_fonts/font = SubResource( 22 )
text = "Beenden"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button4" type="Node2D" parent="."]
position = Vector2( 640, 527 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="About" parent="Button4" instance=ExtResource( 7 )]
position = Vector2( 0, -83.3333 )

[node name="Label" type="Label" parent="Button4"]
margin_left = -152.0
margin_top = -107.0
margin_right = 152.0
margin_bottom = -60.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_colors/font_outline_modulate = Color( 0.745098, 0.396078, 0.407843, 1 )
custom_fonts/font = SubResource( 22 )
text = "über das Spiel"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="about" type="TextureRect" parent="Button4"]
visible = false
margin_left = -194.809
margin_top = -337.491
margin_right = 301.191
margin_bottom = 228.509
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Button4/about"]
margin_left = 18.0
margin_top = 70.0
margin_right = 490.0
margin_bottom = 534.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 36 )
bbcode_enabled = true
bbcode_text = "Version 1.0.1b 
Dies ist eine Preview-Version, die Weitergabe ist nicht erlaubt.

[u]Urheberrecht[/u]
Das gesamte publizierte Material (wie Quelltext, Texte, Bilder, Animationen) und das Layout sind urheberrechtlich geschützt. Alle Rechte sind vorbehalten.
Die Schriftart Terminal Grotesque by Raphaël Bastide, with the contribution of Jérémy Landes. Distributed by velvetyne.fr.

 
[u]Daten[/u]
Die App  sammelt und speichert keine personenbezogenen Daten von ihren Nutzer:innen. Die Nutzungsdaten der App können jedoch anonymisiert für Statistiken zu Forschungszwecken erhoben werden.


©2024 - Phoebe Perlwitz"
text = "Version 1.0.1b 
Dies ist eine Preview-Version, die Weitergabe ist nicht erlaubt.

Urheberrecht
Das gesamte publizierte Material (wie Quelltext, Texte, Bilder, Animationen) und das Layout sind urheberrechtlich geschützt. Alle Rechte sind vorbehalten.
Die Schriftart Terminal Grotesque by Raphaël Bastide, with the contribution of Jérémy Landes. Distributed by velvetyne.fr.

 
Daten
Die App  sammelt und speichert keine personenbezogenen Daten von ihren Nutzer:innen. Die Nutzungsdaten der App können jedoch anonymisiert für Statistiken zu Forschungszwecken erhoben werden.


©2024 - Phoebe Perlwitz"

[node name="Label" type="Label" parent="Button4/about"]
margin_left = 103.0
margin_top = 20.0
margin_right = 409.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 38 )
text = "Über das Spiel"
align = 1
valign = 1

[node name="closeabout" type="TextureRect" parent="Button4/about"]
margin_left = 473.63
margin_top = 13.0895
margin_right = 513.63
margin_bottom = 53.0895
mouse_default_cursor_shape = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Node2D" parent="."]
visible = false
z_index = 3
z_as_relative = false
script = ExtResource( 9 )

[node name="Control" type="Control" parent="Warning"]
margin_left = 400.0
margin_top = 240.0
margin_right = 880.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Warning"]
position = Vector2( 640, 315 )
texture = ExtResource( 8 )

[node name="Achtung2" type="Label" parent="Warning"]
margin_left = 416.0
margin_top = 250.0
margin_right = 864.0
margin_bottom = 445.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
text = "Achtung
Wenn du das Spiel beendest, verlierst du deinen aktuellen Spielstand, falls dieser nicht gespeichert wurde."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achtung3" type="Label" parent="Warning"]
margin_left = 705.0
margin_top = 364.0
margin_right = 878.0
margin_bottom = 403.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
custom_fonts/font = SubResource( 26 )
text = "Beenden"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Control" parent="Warning"]
margin_left = 848.0
margin_top = 224.0
margin_right = 888.0
margin_bottom = 264.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGame" type="Control" parent="Warning"]
margin_left = 706.0
margin_top = 358.0
margin_right = 880.0
margin_bottom = 392.0
mouse_default_cursor_shape = 2

[node name="WarningLaden" type="Node2D" parent="."]
visible = false
z_index = 3
z_as_relative = false
script = ExtResource( 12 )

[node name="Control" type="Control" parent="WarningLaden"]
margin_left = 400.0
margin_top = 240.0
margin_right = 880.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="WarningLaden"]
position = Vector2( 640, 315 )
texture = ExtResource( 8 )

[node name="Achtung2" type="Label" parent="WarningLaden"]
margin_left = 423.0
margin_top = 253.0
margin_right = 871.0
margin_bottom = 424.0
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
custom_fonts/font = SubResource( 28 )
text = "Achtung
Wenn du das Spiel beendest, verlierst du deinen aktuellen Spielstand, falls dieser nicht gespeichert wurde."
autowrap = true

[node name="Achtung3" type="Label" parent="WarningLaden"]
margin_left = 702.0
margin_top = 362.0
margin_right = 878.0
margin_bottom = 398.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
custom_fonts/font = SubResource( 30 )
text = "Beenden"
align = 1
autowrap = true

[node name="close" type="Control" parent="WarningLaden"]
margin_left = 848.0
margin_top = 224.0
margin_right = 888.0
margin_bottom = 264.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGame" type="Control" parent="WarningLaden"]
margin_left = 701.0
margin_top = 360.0
margin_right = 873.0
margin_bottom = 392.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
margin_left = 417.0
margin_top = 194.0
margin_right = 862.0
margin_bottom = 258.0

[node name="achtung" type="Sprite" parent="Control"]
position = Vector2( 218.247, 116.953 )
z_index = 5
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Control/achtung"]
margin_left = 73.0
margin_top = 48.0
margin_right = 231.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 48.8606, 10.7846 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
custom_fonts/font = SubResource( 32 )
text = "Neues Spiel"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="Control/achtung"]
margin_left = -222.0
margin_top = -63.0
margin_right = 226.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 48.8606, 10.7846 )
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
custom_fonts/font = SubResource( 34 )
text = "Achtung!
Wenn du ein neues Spiel startest verlierst du deinen bisherigen Fortschritt."
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="clos" type="Control" parent="Control/achtung"]
margin_left = 212.464
margin_top = -85.8709
margin_right = 252.464
margin_bottom = -45.8709
mouse_default_cursor_shape = 2

[node name="neu" type="Control" parent="Control/achtung"]
margin_left = 62.753
margin_top = 42.0469
margin_right = 237.753
margin_bottom = 86.0469
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="Music" type="TextureRect" parent="."]
margin_left = 807.0
margin_top = 565.0
margin_right = 826.0
margin_bottom = 582.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 3 )

[connection signal="clicked" from="Menu/Button/NeuesSpiel" to="." method="_on_NeuesSpiel_clicked"]
[connection signal="focus_entered" from="Menu/Button/Label" to="." method="_on_Label_focus_entered"]
[connection signal="clicked" from="Menu/Button2/SpielLaden" to="." method="_on_SpielLaden_clicked"]
[connection signal="clicked" from="Menu/Button5/close" to="." method="_on_close_clicked"]
[connection signal="clicked" from="Button4/About" to="." method="_on_About_clicked"]
[connection signal="gui_input" from="Button4/about/closeabout" to="Button4" method="_on_closeabout_gui_input"]
[connection signal="gui_input" from="Warning/close" to="Warning" method="_on_close_gui_input"]
[connection signal="gui_input" from="Warning/newGame" to="Warning" method="_on_newGame_gui_input"]
[connection signal="mouse_entered" from="Warning/newGame" to="Warning" method="_on_newGame_mouse_entered"]
[connection signal="mouse_exited" from="Warning/newGame" to="Warning" method="_on_newGame_mouse_exited"]
[connection signal="gui_input" from="WarningLaden/close" to="WarningLaden" method="_on_close_gui_input"]
[connection signal="gui_input" from="WarningLaden/newGame" to="WarningLaden" method="_on_newGame_gui_input"]
[connection signal="mouse_entered" from="WarningLaden/newGame" to="WarningLaden" method="_on_newGame_mouse_entered"]
[connection signal="mouse_exited" from="WarningLaden/newGame" to="WarningLaden" method="_on_newGame_mouse_exited"]
[connection signal="gui_input" from="Control/achtung/clos" to="." method="_on_clos_gui_input"]
[connection signal="gui_input" from="Control/achtung/neu" to="." method="_on_neu_gui_input"]
[connection signal="mouse_entered" from="Control/achtung/neu" to="." method="_on_neu_mouse_entered"]
[connection signal="mouse_exited" from="Control/achtung/neu" to="." method="_on_neu_mouse_exited"]
[connection signal="gui_input" from="Music" to="." method="_on_Music_gui_input"]
